--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>comp-lock-web-ui</title>
+    <title>Computer Manager</title>
     <link href='static/iconfont/material-icons.css' rel="stylesheet" type="text/css">
   </head>
   <body>
